src/snapshots/libflatterer__tests__tables_csv-9.snap
---
source: src/lib.rs
expression: output

---
- "_link,_link_main,name"
- "0.developer.0,0,deva"
- "1.developer.0,1,devb"

