src/snapshots/libflatterer__tests__testempty.json-datapackage.json.snap
---
source: src/lib.rs
assertion_line: 1917
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 1
      primaryKey: _link
    path: csv/main.csv

