src/snapshots/libflatterer__tests__testempty.json-fields.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,integer,_link,1"

